--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "python3 -m http.server 8000",
     "dev": "python3 -m http.server 8000",
     "serve": "python3 -m http.server 8000",
-    "build": "echo 'No build step required for static HTML app'",
+    "build": "mkdir -p public && cp *.html *.css *.js public/",
     "test": "echo 'No tests configured yet'"
   },
   "keywords": [
